# mlschema

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/: changelog.md  index.md  installation.md  reference.md  schema-standard.md  usage.md
src/mlschema/: __init__.py  mls.py
src/mlschema/core/: __init__.py
src/mlschema/core/app/: __init__.py  field_registry.py  field_service.py  field_strategy.py  registry.py  service.py  strategy.py
src/mlschema/core/domain/: __init__.py  base_field.py  base_report.py
src/mlschema/core/exceptions/: __init__.py  _base.py  registry.py  service.py
src/mlschema/core/util/: __init__.py  dtypes.py
src/mlschema/domain/: __init__.py
src/mlschema/domain/contracts/: __init__.py  form_schema.py
src/mlschema/domain/fields/: __init__.py  base_field.py  field.py  field_types.py
src/mlschema/domain/fields/types/: __init__.py  boolean_field.py  category_field.py  date_field.py  number_field.py  text_field.py
src/mlschema/strategies/: __init__.py
src/mlschema/strategies/app/: __init__.py  boolean_strategy.py  category_strategy.py  date_strategy.py  number_strategy.py  series_strategy.py  text_strategy.py
src/mlschema/strategies/domain/: __init__.py  boolean_field.py  category_field.py  classifier_report.py  date_field.py  field_types.py  number_field.py  regressor_report.py  report_types.py  series_field.py  text_field.py
test/integration/: test_mlschema.py
test/unit/: test_mls.py
test/unit/strategies/: test_boolean_strategy.py  test_category_strategy.py  test_date_strategy.py  test_number_strategy.py  test_text_strategy.py
