[project]
name = "mlschema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pablo Ulloa Santín", email = "pablo.ulloa.santin@udc.es" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.400",
    "ruff>=0.11.7",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.29.1",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
]
